center aligned text and torem fixed

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -3038,8 +3038,9 @@
     }
 
     & .smile-points {
-      font-size: .788rem !important;
+      font-size: toRem(12.608) !important;
       font-weight: normal;
+      justify-content: center;
     }
   }
 }
